7154 Test Cases added